fix: Sonar issues [DHIS2-16065]